@@ -1,16 +1,8 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-using System.Threading.Tasks;
-using BISC.Infrastructure.Global.IoC;
+﻿using BISC.Infrastructure.Global.IoC;
 using BISC.Infrastructure.Global.Services;
 using BISC.Model.Infrastructure.Keys;
-using BISC.Modules.Device.Infrastructure.Keys;
 using BISC.Modules.Device.Presentation.Interfaces.Services;
-using BISC.Modules.Device.Presentation.ViewModels.Factories;
 using BISC.Presentation.Infrastructure.Factories;
-using BISC.Presentation.Infrastructure.Services;
 using BISC.Presentation.Infrastructure.UiFromModel;
 
 namespace BISC.Modules.Device.Presentation.Module
