@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IFtpGooseModelService.cs" />
     <Compile Include="Services\IGooseMatrixFtpService.cs" />
+    <Compile Include="Services\IGooseModelServicesFacade.cs" />
     <Compile Include="Services\IGooseSavingService.cs" />
     <Compile Include="Services\IGoosesModelService.cs" />
   </ItemGroup>
